# am_trend_analysis_data_cleaning_and_analysis

./: README.md  pyproject.toml
am_sma_data_cleaning/: 0____Archives_openai_create_batch.py  0__archive.py  10_2_10_Benchmark_Comparison_Gartner.ipynb  1_EDA_pre_data_cleaning.ipynb  2_1_data_cleaning_part1.ipynb  2_2_data_cleaning_part2_near_duplicates_removal.ipynb  3_1_Combined_EDA.ipynb  6-Timeseries-Analysis.ipynb  7_1_Model_Evaluation_MANUAL_CHECKS.ipynb  7_1_Model_Evaluation_MANUAL_PostLLM_PART2.ipynb  8_PostLLM_Data_Aggregation.ipynb  Post LLM Analaysis Cleanup.ipynb  clean_near_duplicates.ipynb  mermaid_diagrams.md  near_duplicates_implementation_notes.ipynb  no_keywords_tweets_20250330_160324.csv  no_keywords_tweets_20250330_195554.csv  openai_create_batch_v2.py  openai_output_batched_token_inputed.py  openai_tweet_batch_processor.py  random_sample_cleaned_dataset_20250520_144016.csv  raw_data_cleaning.ipynb  utils.py
am_sma_data_cleaning/.ipynb_checkpoints/: 1_EDA_pre_data_cleaning-checkpoint.ipynb  2_1_data_cleaning_part1-checkpoint.ipynb  2_2_data_cleaning_part2_near_duplicates_removal-checkpoint.ipynb  3_1_Combined_EDA-checkpoint.ipynb  5-Analysis-N-grams-Copy1-checkpoint.ipynb  5-Analysis-N-grams-checkpoint.ipynb  6-Timeseries-Analysis-checkpoint.ipynb  7_1_Model_Evaluation_MANUAL_CHECKS-checkpoint.ipynb  7_1_Model_Evaluation_MANUAL_PostLLM_PART2-checkpoint.ipynb  8_PostLLM_Data_Aggregation-checkpoint.ipynb  N_GRAM_v_MAIN-checkpoint.ipynb  Post LLM Analaysis Cleanup-checkpoint.ipynb  TRENDING_MAIN-checkpoint.ipynb  TRENDING_MAIN_BIGRAM-checkpoint.ipynb  raw_data_cleaning-checkpoint.ipynb
am_sma_data_cleaning/openai_processed_data/: batch_683d7c912f04819092b77d81f7d4a26a_output.jsonl  batch_683d88263e5c8190ac5e7d1001a212f2_output.jsonl  batch_683d92e15f408190aeeeba8b4bc30f10_output.jsonl  batch_683d962d4e8c81908911a6ca22f2fac3_output.jsonl  batch_683d9995ba508190be8b27f3df1db2ae_output.jsonl  batch_683d9995ba508190be8b27f3df1db2ae_output.jsonl:Zone.Identifier
am_sma_data_cleaning/openai_processed_data_v2/: batch_683e854d2d208190bc82d155615ddecd_output.jsonl
am_sma_data_cleaning/openai_processed_data_v3/: batch_683ec065908c8190b7d6af7f64c976c5_output.jsonl  (+1 more)
(+16 files in other folders)
