[project]
name = "am-sma-data-cleaning"
version = "0.1.0"
description = ""
authors = [
    {name = "Shola Suleiman",email = "abubakar.suleiman@tuhh.de"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pandas (>=2.2.3,<3.0.0)",
    "numpy (>=2.2.4,<3.0.0)",
    "fuzzywuzzy (>=0.18.0,<0.19.0)",
    "jupyterlab (>=4.3.6,<5.0.0)",
    "notebook (>=7.3.3,<8.0.0)",
    "ipykernel (>=6.29.5,<7.0.0)",
    "tqdm (>=4.67.1,<5.0.0)",
    "datasketch (>=1.6.5,<2.0.0)",
    "ipywidgets (>=8.1.5,<9.0.0)",
    "regex (>=2024.11.6,<2025.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
