[project]
name = "am-sma-data-cleaning"
version = "0.1.0"
description = ""
authors = [
    {name = "Shola Suleiman",email = "abubakar.suleiman@tuhh.de"}
]
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "pandas>=2.2.3,<3.0.0",
    "numpy>=1.21.0,<2.0.0",
    "fuzzywuzzy (>=0.18.0,<0.19.0)",
    "jupyterlab (>=4.3.6,<5.0.0)",
    "notebook (>=7.3.3,<8.0.0)",
    "ipykernel (>=6.29.5,<7.0.0)",
    "tqdm (>=4.67.1,<5.0.0)",
    "datasketch (>=1.6.5,<2.0.0)",
    "ipywidgets (>=8.1.5,<9.0.0)",
    "regex (>=2024.11.6,<2025.0.0)",
    "networkx (>=3.4.2,<4.0.0)",
    "seaborn (>=0.13.2,<0.14.0)",
    "matplotlib (>=3.10.1,<4.0.0)",
    "torch (>=2.6.0,<3.0.0)",
    "langdetect (>=1.0.9,<2.0.0)",
    "dataframe-image (>=0.2.7,<0.3.0)",
    "fasttext (>=0.9.3,<0.10.0)",
    "langid (>=1.1.6,<2.0.0)",
    "openai (>=1.77.0,<2.0.0)",
    "joblib (>=1.5.0,<2.0.0)",
    "tiktoken (>=0.9.0,<0.10.0)",
    "ipynb-py-convert (>=0.4.6,<0.5.0)",
    "transformers (>=4.51.3,<5.0.0)",
    "nltk (>=3.9.1,<4.0.0)",
    "scikit-learn (>=1.6.1,<2.0.0)",
    "gensim (>=4.3.3,<5.0.0)",
    "spacy (>=3.8.7,<4.0.0)",
    "statsmodels (>=0.14.4,<0.15.0)",
    "adjusttext (>=1.3.0,<2.0.0)",
    "python-levenshtein (>=0.27.1,<0.28.0)",
    "plotly (>=6.1.2,<7.0.0)",
    "kaleido (==0.2.1)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
